<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3ECED"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewQM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/quiz_matematyczny"
        android:textColor="#0B1E87"
        android:textSize="36sp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:fontFamily="@font/bangers"
        android:text="@string/dodawanie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0D8CF1"
        android:fontFamily="@font/bangers"
        android:text="@string/odejmowanie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMultiple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:fontFamily="@font/bangers"
        android:text="@string/mnozenie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#117DAE"
        android:fontFamily="@font/bangers"
        android:text="@string/dzielenie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonDivide2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#02335A"
        android:fontFamily="@font/bangers"
        android:text="@string/dzielenie_z_reszta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />


</LinearLayout>